kustomize/overlay/staging/iwiick-proj-1-staging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iwiick-proj-1-staging
  labels:
    environmentId: env_c39087ff-6627-4b57-a1f4-736bd6d2be0e
    projectId: project_82f4100c-84e8-48e5-ba8e-3d53f7e54908
    projectName: iwiick-proj-1
    environmentName: staging
    organizationId: org_5bdc6e05-06b5-4d67-91b9-f020de5fdd93
