kustomize/overlay/staging/iwiick-proj-1-staging-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: iwiick-proj-1-staging
  labels:
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_c0bc69cf-4b2e-4493-ab8e-970a6433cce0
    environmentId: env_5b89d46d-9a16-4f9f-ad9a-926157935bc6
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_5b89d46d-9a16-4f9f-ad9a-926157935bc6
    - from:
        - namespaceSelector:
            matchLabels:
              name: skyu-system
    - ports:
        - protocol: UDP
          port: 53
